# cache

./: Cargo.toml
benches/: cache_benchmark.rs  diskcache.rs  evict_alg.rs
src/: cache.rs  diskcache.rs  fifo.rs  lib.rs  s3fifo.rs
src/cache/: lru.rs
tests/it/: cache.rs
tests/it/cache/: fifo.rs
